k8s/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: photo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: ghcr.io/christheoreo/photo-k8-app/frontend:cd24eb9b512ecb7b25db77548ffe557b925885a0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: photo-app
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
